syntax = "proto3";
package slinky.marketmap.v1;

import "gogoproto/gogo.proto";
import "slinky/marketmap/v1/market.proto";
import "slinky/marketmap/v1/params.proto";

option go_package = "github.com/skip-mev/slinky/x/marketmap/types";

// GenesisState defines the x/marketmap module's genesis state.
message GenesisState {
  // MarketMap defines the global set of market configurations for all providers
  // and markets.
  MarketMap market_map = 1 [ (gogoproto.nullable) = false ];

  // LastUpdated is the last block height that the market map was updated.
  // This field can be used as an optimization for clients checking if there
  // is a new update to the map.
  uint64 last_updated = 2;

  // Params are the parameters for the x/marketmap module.
  Params params = 3 [ (gogoproto.nullable) = false ];
}
